solving somme problems with project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -481,4 +481,5 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<button type="button" class="btn btn-primary">Button</button>
 <router-outlet></router-outlet>
