--- a/src/app/display/header/header.component.html
+++ b/src/app/display/header/header.component.html
@@ -1,1 +1,21 @@
-<p>header works!</p>
+<mat-toolbar color="primary" class="navbar">
+    <button mat-icon-button (click)="toggleSidebar()"> <mat-icon>menu</mat-icon></button>
+    <div class="row mr-2 ml-auto">
+        <ul>
+            <li>
+                <button mat-button [matMenuTriggerFor]="menu" class="user mt-2 d-flex alihn-items-center">
+                    <img src="#" alt="an image" class="user-image mr-1 p-2">
+                    User Name :
+                    <mat-icon class="user-image-icon ml-1">keyboard_arrow_down</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item>
+                        <mat-icon>exit_to_app</mat-icon>
+                        Logout
+                    </button>
+                </mat-menu>
+            </li>
+        </ul>
+    </div>
+</mat-toolbar>
+
