--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -23,22 +23,24 @@
 
     <mat-divider></mat-divider>
 
-    <button mat-button class="menu-button">
-        <mat-icon>home</mat-icon>
-        <span>Login</span>
-    </button>
-    <button mat-button class="menu-button">
-        <mat-icon>home</mat-icon>
-        <span>Classes</span>
-    </button>
-    <button mat-button class="menu-button">
-        <mat-icon>person</mat-icon>
-        <span>Personnel</span>
-    </button>
-    <button mat-button class="menu-button">
-        <mat-icon>info</mat-icon>
-        <span>About</span>
-    </button>
+    <a href="" mat-list-item routerLink="/class" routerLinkActive= "list-item-active">
+      <mat-icon>home</mat-icon>Classes
+  </a>
+  <a href="" mat-list-item routerLink="/personels" routerLinkActive= "list-item-active">
+      <mat-icon>home</mat-icon>Personnel
+  </a>
+  <a href="" mat-list-item routerLink="/students" routerLinkActive= "list-item-active">
+      <mat-icon>home</mat-icon>Students
+  </a>
+  <a href="" mat-list-item routerLink="/assignation" routerLinkActive= "list-item-active">
+      <mat-icon>home</mat-icon>Assignation
+  </a>
+  <a href="" mat-list-item routerLink="/notes" routerLinkActive= "list-item-active">
+      <mat-icon>home</mat-icon>Notes
+  </a>
+  <a href="" mat-list-item routerLink="/reports" routerLinkActive= "list-item-active">
+      <mat-icon>home</mat-icon>Reports
+  </a>
 
     <mat-divider></mat-divider>
 
