--- a/src/app/classes/classes.component.html
+++ b/src/app/classes/classes.component.html
@@ -1,2 +1,34 @@
-<p>classes works! </p>
-<p>Comment allez vous?</p>
+<div class="header">
+  <table class="class-table table  border-primary">
+    <thead>
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Label</th>
+        <th scope="col">Coef</th>
+        <th scope="col">Enseignant</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="table-active">
+        <th scope="row">1</th>
+        <td>Anglais</td>
+        <td>2</td>
+        <td>Oben</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Mathematique</td>
+        <td>4</td>
+        <td>Kenfack</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td >Physique</td>
+        <td>3</td>
+        <td>Feussi</td>
+      </tr>
+    </tbody>
+  </table>
+  <button class="mat-raised-button"> new class</button>
+  <!-- <mat-icon>icon-name</mat-icon> -->
+</div>
