--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,15 +16,17 @@ mat-sidenav {
 }
 
 .content {
-  height: calc(100vh - 95px );
+  height: calc(100vh - 100px );
   margin: 16px;
   margin-left: 32px;
+  scroll-behavior: auto;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-y: scroll;
 
-  font-size: 2rem;
-  color: lightgray;
+  // font-size: 2rem;
+  // color: lightgray;
   border-radius: 10px;
   background-color: aliceblue;
 }
