--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -1,5 +1,52 @@
 <h2 class="text-center">Login</h2>
 <div class="row">
+  <div class="col-xl-6">
+    <div class="card-body p-md-10">
+      <form
+        [formGroup]="loginForm"
+        (ngSubmit)="onSubmit()"
+        autocomplete="off"
+      >
+      <div class="row">
+        <div class="col-lg mb-4">
+        <div class="form-outline">
+          <label for="email">Phone</label>
+          <input
+            type="tel"
+            name="tel"
+            formControlName="tel"
+            autocomplete="off"
+            class="form-control input-sm"
+            placeholder="Tel"
+          />
+        </div>
+        </div>
+      </div>
+
+        <div class="row">
+          <div class="col-lg mb-4">
+        <div class="form-outline">
+          <label for="Password">Password</label>
+          <input
+            type="password"
+            name="Password"
+            formControlName="password"
+            autocomplete="off"
+            class="form-control input-sm"
+            placeholder="Password"
+          />
+        </div>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-success" [disabled]="!loginForm.valid">Login</button>
+      </form>
+    </div>
+  </div>
+  <div class="col-md-5"></div>
+</div>
+
+<!-- <h2 class="text-center">Login</h2>
+<div class="row">
     <div class="col-md-3">
     </div>
     <div class="col-md-6 col-md-offset-3">
@@ -8,12 +55,12 @@
                 <div class="form-group">
                     <label for="name">User Name</label>
                     <input type="name" name="name" formControlName="name" autocomplete="off" class="form-control input-sm" placeholder="Username">
- 
+
                 </div>
                 <div class="form-group">
                     <label for="Password">Password</label>
                     <input type="password" name="Password" formControlName="password"  autocomplete="off" class="form-control input-sm" placeholder="Password">
- 
+
                 </div>
                 <button type="submit" class="btn btn-primary" [disabled]="!angForm.valid">Login</button>
             </form>
@@ -21,5 +68,5 @@
     </div>
     <div class="col-md-3">
     </div>
- 
-</div>
+
+</div> -->
