definition of the connection functionnaluity and update of the connection interface

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,9 +20,9 @@ mat-sidenav {
   margin: 16px;
   margin-left: 32px;
   scroll-behavior: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
   overflow-y: scroll;
 
   // font-size: 2rem;
