--- a/src/app/modals/add-class/add-class.component.html
+++ b/src/app/modals/add-class/add-class.component.html
@@ -32,6 +32,13 @@
       </select>
     </div>
 
+    <div class="input-content">
+      <label class="label">id-etablissement</label>
+      <select disabled >
+        <option>Lycee de Bieyem ass</option>
+      </select>
+    </div>
+
     <div class="buttons">
       <div class="submit mat-button">
         <mat-icon class="submit-button">check</mat-icon>
