--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -1,46 +1,99 @@
-<h2 class="text-center">Login</h2>
-<div class="row">
-  <div class="col-xl-6">
-    <div class="card-body p-md-10">
-      <form
-        [formGroup]="loginForm"
-        (ngSubmit)="onSubmit()"
-        autocomplete="off"
-      >
-      <div class="row">
-        <div class="col-lg mb-4">
-        <div class="form-outline">
-          <label for="email">Phone</label>
-          <input
-            type="tel"
-            name="tel"
-            formControlName="tel"
-            autocomplete="off"
-            class="form-control input-sm"
-            placeholder="Tel"
-          />
-        </div>
-        </div>
+<!-- <div id="carouselExampleCaptions" class="carousel slide carousel-contenair bg-image" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../../../assets/UCAC.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
       </div>
-
-        <div class="row">
-          <div class="col-lg mb-4">
-        <div class="form-outline">
-          <label for="Password">Password</label>
-          <input
-            type="password"
-            name="Password"
-            formControlName="password"
-            autocomplete="off"
-            class="form-control input-sm"
-            placeholder="Password"
-          />
-        </div>
-          </div>
-        </div>
-        <button type="submit" class="btn btn-success" [disabled]="!loginForm.valid">Login</button>
-      </form>
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/SA_school.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/UCAC.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
     </div>
   </div>
-  <div class="col-md-5"></div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div> -->
+
+<div class="bg-image">
+
+  <div class="absolute-bg"></div>
+  <!-- <div class="subcalque"> -->
+    <div class="content">
+      <h2 class="text-center">Login</h2>
+      <div class="row">
+        <div class="col-xl-6">
+          <div class="card-body p-md-10">
+            <form
+              [formGroup]="loginForm"
+              (ngSubmit)="onSubmit()"
+              autocomplete="off"
+            >
+              <div class="row">
+                <div class="col-lg mb-4">
+                  <div class="form-outline">
+                    <label for="email">Phone</label>
+                    <input
+                      type="tel"
+                      name="tel"
+                      formControlName="tel"
+                      autocomplete="off"
+                      class="form-control input-sm"
+                      placeholder="Tel"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-lg mb-4">
+                  <div class="form-outline">
+                    <label for="Password">Password</label>
+                    <input
+                      type="password"
+                      name="Password"
+                      formControlName="password"
+                      autocomplete="off"
+                      class="form-control input-sm"
+                      placeholder="Password"
+                    />
+                  </div>
+                </div>
+              </div>
+              <button
+                type="submit"
+                class="btn btn-success"
+                [disabled]="!loginForm.valid"
+              >
+                Login
+              </button>
+            </form>
+          </div>
+        </div>
+        <div class="col-md-5"></div>
+    </div>
+    </div>
+  <!-- </div> -->
 </div>
