--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -16,13 +16,14 @@ mat-sidenav {
 }
 
 .content {
-  height: calc(100vh - 40px );
+  height: calc(100vh - 100px );
   margin: 16px;
   margin-left: 32px;
-  overflow: hidden;
+  scroll-behavior: auto;
   // display: flex;
   // justify-content: center;
   // align-items: center;
+  overflow-y: scroll;
 
   // font-size: 2rem;
   // color: lightgray;
@@ -31,7 +32,7 @@ mat-sidenav {
 }
 
 mat-sidenav-container {
-  height: calc(100vh) ;
+  height: calc(100vh - 65px ) ;
   justify-content: space-between;
 }
 
