latest version of me

--- a/src/app/academics/notes/notes.component.html
+++ b/src/app/academics/notes/notes.component.html
@@ -1,1 +1,10 @@
-<p>notes works!</p>
+<div class="test">
+    <button class="mat-raised-button">
+        <mat-icon aria-hidden="false" aria-label="Example home icon" >add</mat-icon>
+        Add 
+    </button>
+    <button class="mat-raised-button" >
+        <mat-icon >download</mat-icon>
+         View Notes
+    </button>
+</div>
