--- a/src/app/academics/assignation/assignation.component.html
+++ b/src/app/academics/assignation/assignation.component.html
@@ -1,1 +1,10 @@
-<p>assignation works!</p>
+<div class="test">
+    <button class="mat-raised-button">
+        <mat-icon aria-hidden="false" aria-label="Example home icon" >add</mat-icon>
+        Add Assignment
+    </button>
+    <button class="mat-raised-button" >
+        <mat-icon >download</mat-icon>
+        Assignment List
+    </button>
+</div>
