--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,15 +16,10 @@ mat-sidenav {
 }
 
 .content {
-  height: calc(100vh - 95px );
+  height: calc(100vh - 100px );
   margin: 16px;
   margin-left: 32px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  font-size: 2rem;
-  color: lightgray;
+  overflow-y: scroll;
   border-radius: 10px;
   background-color: aliceblue;
 }
@@ -80,6 +75,19 @@ mat-divider {
   width: 50px;
   align-self: flex-end;
 }
+
+//function buttons
+.test {
+  //background-color: rgba(255, 255, 255, 0);
+  width: 100%;
+  height: 50px;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  //justify-content: space-around;
+}
+
+
 
 // burger button
 
