--- a/src/app/persons/students/students.component.html
+++ b/src/app/persons/students/students.component.html
@@ -1,1 +1,10 @@
-<p>students works!</p>
+<div class="test">
+    <button class="mat-raised-button">
+        <mat-icon aria-hidden="false" aria-label="Example home icon" >add</mat-icon>
+        Add Personnel
+    </button>
+    <button class="mat-raised-button" >
+        <mat-icon >download</mat-icon>
+        Personel List
+    </button>
+</div>
