--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -43,7 +43,7 @@
   <!-- <div class="subcalque"> -->
     <div class="content">
       <h2 class="text-center">Login</h2>
-      <div class="row">
+      <!-- <div class="row"> -->
         <div class="col-xl-6">
           <div class="card-body p-md-10">
             <form
@@ -91,8 +91,8 @@
               </button>
             </form>
           </div>
-        </div>
-        <div class="col-md-5"></div>
+        <!-- </div> -->
+        <!-- <div class="col-md-5"></div> -->
     </div>
     </div>
   <!-- </div> -->
