create class php request added

--- a/src/app/structures/classes/classes.component.html
+++ b/src/app/structures/classes/classes.component.html
@@ -20,10 +20,10 @@
         <td>{{clas.niveau}}</td>
         <!-- <td>{{clas.examen}}</td> -->
         <td>
-          <button class="edit">edit</button>
+          <button class="btn btn-primary edit">edit</button>
         </td>
         <td>
-          <button class="delete" (click)="delete(clas)" >delete</button>
+          <button class="btn btn-danger delete" (click)="delete(clas)" >delete</button>
         </td>
 
       </tr>
