--- a/src/app/structures/classes/classes.component.scss
+++ b/src/app/structures/classes/classes.component.scss
@@ -6,7 +6,8 @@ content{
   border-radius: 5px;
 }
 .delete{
-  border-radius: 5px;
-  background-color: rgb(230, 101, 16);
-  color: aliceblue;
+  // border-radius: 5px;
+  // background-color: rgb(230, 101, 16);
+  // color: aliceblue;
+  width: min-content;
 }
